src/App.css
body, *, *::after ,*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Clash Display', 'Times New Roman', Times, serif; 
  font-weight: 100;
}

:root {
  --primary: #FFFFE3;
  --secondary: #10100E;
}

body {
  width: 100vw;
  background-color: var(--secondary);
  overflow-x: hidden;
}

.main-app-container {
  overflow-x: hidden;
}

.navbar-wrapper {
  z-index: 999;
  position: absolute;
  left: 0;
  top: 0;
  padding: 0 10%;
  width: 100%;
}

.navbar-wrapper .row-w-padding {
  padding: 15px 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.hamburger-bar {
  width: 24px;
  height: 1px;
  background-color: var(--primary);
  position: relative;
}

.hamburger-bar::before,
.hamburger-bar::after {
  content: '';
  position: absolute;
  height: 1px;
  background-color: var(--primary);
}

.hamburger-bar::before {
  width: 22px;
  top: -8px;
  right: 0;
}

.hamburger-bar::after {
  width: 27px;
  bottom: -8px;
  right: 0;
}

.navbar-wrapper .row-w-padding .links {
  display: none;
  gap: 60px;
  opacity: 70%;
}

.navbar-wrapper .row-w-padding .logo,
.navbar-wrapper .row-w-padding .links .link,
.navbar-wrapper .row-w-padding .links .toggle-theme {
  text-decoration: none;
  color: var(--primary);
}

.navbar-wrapper .row-w-padding .logo {
  font-size: 20px;
}

#hero-wrapper {
  width: 100%;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

#hero-wrapper .hero-main-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: var(--primary);
  font-weight: 100;
}

#hero-wrapper .scroll-text {
  position: absolute;
  color: var(--primary);
  background-color: var(--secondary);
  padding: 50% 90%;
}

#hero-wrapper .scroll-text h1 {
  opacity: 70%;
}

.hero-main-content {
  text-align: center;
}

#hero-wrapper .hero-main-content .main h2 span {
  font-weight: 500;
}

#hero-wrapper .hero-main-content .desc h2{
  color: var(--secondary);
  background-color: var(--primary);
  padding: 4px 8px;
  font-weight: 300;
}

.pillar {
  z-index: 998;
  position: fixed;
  display: none;
  flex-direction: column;
  bottom: 0;
  justify-content: center;
  align-items: center;
  gap: 10px;
}

#left-pillar {
  margin-left: 10%;
}

#left-pillar img {
  height: 40px;
  opacity: 80%;
}

#right-pillar {
  right: 0;
  margin-right: 10%;
}

#right-pillar p {
  color: var(--primary);
  writing-mode: vertical-lr;
  font-size: 17px;
  letter-spacing: 4px;
  opacity: 80%;
}


.pillar .vertical-line {
  background-color: var(--primary);
  height: 150px;
  width: 1px;
  opacity: 50%;
}


@media only screen and (min-width: 800px) {

  .pillar {
    display: flex;
  }

  .navbar-wrapper .row-w-padding .logo h1 {
    font-size: 64px;
  }

  .navbar-wrapper .row-w-padding .links {
    display: flex;
    font-size: 25px;
    justify-content: center;
    align-items: center;
  }

  .navbar-wrapper .row-w-padding .hamburger-menu{
    display: none;
  }
}

